src/App.css
body {
  margin: 0;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

.btn {
  background-color: rgb(88, 166, 255);
  color: white;
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 16rem;
  font-size: 16px;
  transition: background 0.2s;
}

.btn:hover {
  background-color: rgb(58, 150, 255);
  cursor: pointer;
}

.app {
  display: grid;
  grid-template-columns: repeat(16, 1fr);
  max-width: 70vw;
  min-height: 100vh;
  margin: 0 auto;
}

.sidebar {
  grid-column: span 3;
  display: flex;
  flex-direction: column;
}

.feed {
  grid-column: span 8;
  border-left: 1px solid rgb(230, 230, 230);
  border-right: 1px solid rgb(230, 230, 230);
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.widget {
  grid-column: span 5;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 0.5rem 2rem;
}

.sidebar__nav {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.sidebar__nav > a {
  text-decoration: none;
  color: black;
  font-size: 20px;
}

.sidebar__nav__link {
  padding: 0.6rem 1rem;
  border-radius: 16rem;
  transition: background 0.2s;
  display: inline-flex;
  align-items: center;
}

.sidebar__nav > a:hover .sidebar__nav__link {
  background-color: rgba(0, 0, 0, 0.1);
}

.sidebar__twittericon {
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.5rem;
}

.icon {
  width: 1.5rem;
  height: 1.5rem;
  margin-right: 1rem;
}

.feed__home {
  font-size: x-large;
  font-weight: 500;
  color: black;
  text-decoration: none;
  padding: 1rem;
}

.feed__tweetbox {
  display: flex;
  gap: 0.5rem;
  border-bottom: 1px solid rgb(230, 230, 230);
  padding: 0 1rem;
}

.feed__tweetbox__profileicon {
  width: 3rem;
  height: 3rem;
}

.tweetinput {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 1rem;
}

.tweetinput__box--input {
  border: none;
  font-size: 22px;
  flex: 1;
  outline: none;
}

.tweetsend {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-top: 1px solid rgb(230, 230, 230);
  padding: 1rem;
}

.tweetsend__media__icon:hover {
  cursor: pointer;
}

.widget__search {
  display: flex;
}

.widget__search__input {
  border: none;
  border-radius: 16rem;
  background-color: rgb(245, 245, 245);
  color: rgb(20, 20, 20);
  padding: 1rem;
  flex: 1;
}

.widget__search__input:focus {
  outline: rgb(58, 150, 255) solid 1px;
}

@media screen and (max-width: 1400px) {
  .app {
    max-width: 85vw;
  }
  .sidebar__nav__link__text {
    display: none;
  }
  .sidebar {
    grid-column: span 1;
  }
  .feed {
    grid-column: span 10;
  }
}

@media screen and (max-width: 800px) {
  .app {
    max-width: 100vw;
  }
  .sidebar {
    align-items: center;
  }
  .widget {
    display: none;
  }
  .feed {
    grid-column: span 15;
  }
  .icon {
    margin-right: 0;
  }
}

